@@ -27,6 +27,7 @@
 // Collaborating Class Headers --
 //-------------------------------
 #include "psddl_psana/cspad.ddl.h"
+#include "pdsdata/xtc/Src.hh"
 
 #include "pdscalibdata/CalibParsCenterV1.h"      
 #include "pdscalibdata/CalibParsCenterCorrV1.h"  
@@ -94,10 +95,20 @@ public:
    *  @param[in] source         The name of the data source.
    *  @param[in] runNumber      Run number to search the valid file name.
    */ 
+
+  // DEPRICATED constructor, which use string& source ...
+  // Leave it for backward compatability...
   CSPadCalibPars ( const std::string&   calibDir,           //  /reg/d/psdm/cxi/cxi35711/calib
                    const std::string&   typeGroupName,      //  CsPad::CalibV1
                    const std::string&   source,             //  CxiDs1.0:Cspad.0
                    const unsigned long& runNumber ) ;       //  10
+
+  // RECOMMENDED constructor
+  CSPadCalibPars ( const std::string&   calibDir,           //  /reg/d/psdm/cxi/cxi35711/calib
+                   const std::string&   typeGroupName,      //  CsPad::CalibV1
+                   const Pds::Src&      src,                //  Pds::Src m_src; <- is defined in env.get(...,&m_src)
+                   const unsigned long& runNumber ) ;       //  10
+
 
   // Destructor
   virtual ~CSPadCalibPars () ;
@@ -114,6 +125,7 @@ public:
   void fillCalibParsV1       ();
   void fillDefaultCalibParsV1();
   void fatalMissingFileName  ();
+  void msgUseDefault         ();
   void printCalibPars        ();
   void printInputPars        ();
 
@@ -194,6 +206,7 @@ private:
   std::string   m_calibDir;
   std::string   m_typeGroupName;
   std::string   m_source;
+  Pds::Src      m_src;
   std::string   m_dataType;
   unsigned long m_runNumber;
 
